--- a/rs/notebook/extract_agent.ipynb
+++ b/rs/notebook/extract_agent.ipynb
@@ -100,7 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "module.params.0.weight torch.Size([2, 256, 27])\n",
+      "module.params.0.weight torch.Size([2, 256, 18])\n",
       "module.params.0.bias torch.Size([2, 256])\n",
       "module.params.2.weight torch.Size([2, 256, 256])\n",
       "module.params.2.bias torch.Size([2, 256])\n",
@@ -118,6 +118,8 @@
     "for k, v in critic.items():\n",
     "    if '__' not in k:\n",
     "        new_critic[k] = v[:2]  # Extract the first two agents' weights and biases\n",
+    "        if 'module.params.0.weight' in k:\n",
+    "            new_critic[k] = new_critic[k][..., :18]\n",
     "        print(k, new_critic[k].shape)\n",
     "    elif \"batch_size\" in k:\n",
     "        new_critic[k] = torch.Size([2])  # Adjust batch size for the new critic\n",
@@ -148,7 +150,7 @@
       "actor_network_params.module.0.module.0.params.4.bias torch.Size([2, 6])\n",
       "actor_network_params.__batch_size torch.Size([2])\n",
       "actor_network_params.__device None\n",
-      "critic_network_params.module.params.0.weight torch.Size([2, 256, 27])\n",
+      "critic_network_params.module.params.0.weight torch.Size([2, 256, 18])\n",
       "critic_network_params.module.params.0.bias torch.Size([2, 256])\n",
       "critic_network_params.module.params.2.weight torch.Size([2, 256, 256])\n",
       "critic_network_params.module.params.2.bias torch.Size([2, 256])\n",
@@ -168,6 +170,8 @@
     "for k, v in loss_module.items():\n",
     "    if '__' not in k and 'params' in k:\n",
     "        new_loss_module[k] = v[:2]  # Extract the first two agents' weights and biases\n",
+    "        if 'critic_network_params.module.params.0.weight' in k:\n",
+    "            new_loss_module[k] = new_loss_module[k][..., :18]\n",
     "        print(k, new_loss_module[k].shape)\n",
     "    elif \"batch_size\" in k:\n",
     "        new_loss_module[k] = torch.Size([2])  # Adjust batch size for the new loss_module\n",
@@ -179,10 +183,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b63a0705",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 torch.Size([2, 256, 9]) torch.Size([2, 256, 9])\n",
+      "1 torch.Size([2, 256]) torch.Size([2, 256])\n",
+      "2 torch.Size([2, 256, 256]) torch.Size([2, 256, 256])\n",
+      "3 torch.Size([2, 256]) torch.Size([2, 256])\n",
+      "4 torch.Size([2, 6, 256]) torch.Size([2, 6, 256])\n",
+      "5 torch.Size([2, 6]) torch.Size([2, 6])\n",
+      "6 torch.Size([2, 256, 18]) torch.Size([2, 256, 18])\n",
+      "7 torch.Size([2, 256]) torch.Size([2, 256])\n",
+      "8 torch.Size([2, 256, 256]) torch.Size([2, 256, 256])\n",
+      "9 torch.Size([2, 256]) torch.Size([2, 256])\n",
+      "10 torch.Size([2, 1, 256]) torch.Size([2, 1, 256])\n",
+      "11 torch.Size([2, 1]) torch.Size([2, 1])\n"
+     ]
+    }
+   ],
    "source": [
     "optimizer = model['optimizer']\n",
     "optimizer.keys()\n",
@@ -190,13 +213,16 @@
     "for k, state_idx in new_optimizer['state'].items():\n",
     "    state_idx['exp_avg'] = state_idx['exp_avg'][:2]\n",
     "    state_idx['exp_avg_sq'] = state_idx['exp_avg_sq'][:2]\n",
+    "    if k == 6:\n",
+    "        state_idx['exp_avg'] = state_idx['exp_avg'][..., :18]\n",
+    "        state_idx['exp_avg_sq'] = state_idx['exp_avg_sq'][..., :18]\n",
     "for k, state_idx in new_optimizer['state'].items():\n",
     "    print(k, state_idx['exp_avg'].shape, state_idx['exp_avg_sq'].shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "2386b160",
    "metadata": {},
    "outputs": [],
@@ -220,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "39ad7139",
    "metadata": {},
    "outputs": [],
@@ -231,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "98332344",
    "metadata": {},
    "outputs": [
@@ -241,7 +267,7 @@
        "dict_keys(['policy', 'critic', 'loss_module', 'optimizer'])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "735187d2",
    "metadata": {},
    "outputs": [
@@ -277,10 +303,7 @@
     "new_policy = copy.deepcopy(policy)\n",
     "for k, v in policy.items():\n",
     "    if '__' not in k:\n",
-    "        # the policy shape is [3, ...] for 3 agents, I need to copy the second agent's weights and biases and add to the new policy to make the shape [4, ...]\n",
-    "        second_v = v[1:2].clone()  # Clone the second agent's weights and biases\n",
-    "        third_v = v[2:3].clone()  # Clone the third agent's weights and biases\n",
-    "        new_policy[k] = torch.cat((v[:2], second_v, third_v), dim=0)  # Concatenate the first two agents' weights and biases with the cloned second agent\n",
+    "        new_policy[k] = torch.cat((v[:2], v[1:].clone()), dim=0)  # Concatenate the first two agents' weights and biases with the cloned second agent\n",
     "        print(k, new_policy[k].shape)\n",
     "    elif \"batch_size\" in k:\n",
     "        new_policy[k] = torch.Size([4])  # Adjust batch size for the new policy\n",
@@ -292,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "fd0b694e",
    "metadata": {},
    "outputs": [
@@ -317,9 +340,7 @@
     "new_critic = copy.deepcopy(critic)\n",
     "for k, v in critic.items():\n",
     "    if '__' not in k:\n",
-    "        second_v = v[1:2].clone()  # Clone the second agent's weights and biases\n",
-    "        third_v = v[2:3].clone()  # Clone the third agent's weights and biases\n",
-    "        new_critic[k] = torch.cat((v[:2], second_v, third_v), dim=0)  # Concatenate the first two agents' weights and biases\n",
+    "        new_critic[k] = torch.cat((v[:2], v[1:].clone()), dim=0)  # Concatenate the first two agents' weights and biases\n",
     "        print(k, new_critic[k].shape)\n",
     "    elif \"batch_size\" in k:\n",
     "        new_critic[k] = torch.Size([2])  # Adjust batch size for the new critic\n",
@@ -331,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "43b9109b",
    "metadata": {},
    "outputs": [
@@ -369,9 +390,7 @@
     "new_loss_module = copy.deepcopy(loss_module)\n",
     "for k, v in loss_module.items():\n",
     "    if '__' not in k and 'params' in k:\n",
-    "        second_v = v[1:2].clone()  # Clone the second agent's weights and biases\n",
-    "        third_v = v[2:3].clone()  # Clone the third agent's weights and biases\n",
-    "        new_loss_module[k] = torch.cat((v[:2], second_v, third_v), dim=0)  # Concatenate the first two agents' weights and biases\n",
+    "        new_loss_module[k] = torch.cat((v[:2], v[1:].clone()), dim=0)  # Concatenate the first two agents' weights and biases\n",
     "        print(k, new_loss_module[k].shape)\n",
     "    elif \"batch_size\" in k:\n",
     "        new_loss_module[k] = torch.Size([2])  # Adjust batch size for the new loss_module\n",
@@ -383,10 +402,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "453e2493",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 torch.Size([4, 256, 9]) torch.Size([4, 256, 9])\n",
+      "1 torch.Size([4, 256]) torch.Size([4, 256])\n",
+      "2 torch.Size([4, 256, 256]) torch.Size([4, 256, 256])\n",
+      "3 torch.Size([4, 256]) torch.Size([4, 256])\n",
+      "4 torch.Size([4, 6, 256]) torch.Size([4, 6, 256])\n",
+      "5 torch.Size([4, 6]) torch.Size([4, 6])\n",
+      "6 torch.Size([4, 256, 27]) torch.Size([4, 256, 27])\n",
+      "7 torch.Size([4, 256]) torch.Size([4, 256])\n",
+      "8 torch.Size([4, 256, 256]) torch.Size([4, 256, 256])\n",
+      "9 torch.Size([4, 256]) torch.Size([4, 256])\n",
+      "10 torch.Size([4, 1, 256]) torch.Size([4, 1, 256])\n",
+      "11 torch.Size([4, 1]) torch.Size([4, 1])\n"
+     ]
+    }
+   ],
    "source": [
     "optimizer = model['optimizer']\n",
     "optimizer.keys()\n",
@@ -400,7 +438,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "id": "47cd5832",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'lr': 0.0002,\n",
+       "  'betas': (0.9, 0.999),\n",
+       "  'eps': 1e-08,\n",
+       "  'weight_decay': 0,\n",
+       "  'amsgrad': False,\n",
+       "  'maximize': False,\n",
+       "  'foreach': None,\n",
+       "  'capturable': False,\n",
+       "  'differentiable': False,\n",
+       "  'fused': None,\n",
+       "  'params': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]}]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_optimizer['param_groups']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "3d114cd1",
    "metadata": {},
    "outputs": [],
@@ -411,7 +480,7 @@
     "    'loss_module': new_loss_module,\n",
     "    'optimizer': new_optimizer,\n",
     "}\n",
-    "torch.save(new_model, \"/home/hieule/research/saris_revised/local_assets/Hallway_L/hallway_focus_2_agents/checkpoint_187_agents.pt\")"
+    "torch.save(new_model, \"/home/hieule/research/saris_revised/local_assets/Hallway_L/hallway_focus_4_agents/checkpoint_187_agents.pt\")"
    ]
   }
  ],
