--- a/rs/notebook/hallway_tracking_xfast_results.ipynb
+++ b/rs/notebook/hallway_tracking_xfast_results.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "68304183",
    "metadata": {},
    "outputs": [],
@@ -33,11 +33,11 @@
     "    \"r9\": \"/home/hieule/research/saris_revised/local_assets/Hallway_L/e2tot200/hallway_focus_3_agents_r9_eval/env_rollout_images.pt\",\n",
     "    \"r11\": \"/home/hieule/research/saris_revised/local_assets/Hallway_L/e2tot200/hallway_focus_3_agents_r11_eval/env_rollout_images.pt\",\n",
     "    # \"colr7\": \"\",\n",
-    "    # \"f0\": \"/home/hieule/research/saris_revised/local_assets/Hallway_L/e2tot200/hallway_focus_f0_eval/env_rollout_images.pt\",\n",
-    "    # \"f1\": \"/home/hieule/research/saris_revised/local_assets/Hallway_L/e2tot200/hallway_focus_f1_eval/env_rollout_images.pt\",\n",
-    "    # \"f2\": \"/home/hieule/research/saris_revised/local_assets/Hallway_L/e2tot200/hallway_focus_3_agents_r7_eval/env_rollout_images.pt\",\n",
-    "    # \"f3\": \"/home/hieule/research/saris_revised/local_assets/Hallway_L/e2tot200/hallway_focus_f3_eval/env_rollout_images.pt\",\n",
-    "    # \"f4\": \"/home/hieule/research/saris_revised/local_assets/Hallway_L/e2tot200/hallway_focus_f4_eval/env_rollout_images.pt\",\n",
+    "    \"f0\": \"/home/hieule/research/saris_revised/local_assets/Hallway_L/e2tot200/hallway_focus_f0_eval/env_rollout_images.pt\",\n",
+    "    \"f1\": \"/home/hieule/research/saris_revised/local_assets/Hallway_L/e2tot200/hallway_focus_f1_eval/env_rollout_images.pt\",\n",
+    "    \"f2\": \"/home/hieule/research/saris_revised/local_assets/Hallway_L/e2tot200/hallway_focus_3_agents_r7_eval/env_rollout_images.pt\",\n",
+    "    \"f3\": \"/home/hieule/research/saris_revised/local_assets/Hallway_L/e2tot200/hallway_focus_f3_eval/env_rollout_images.pt\",\n",
+    "    \"f4\": \"/home/hieule/research/saris_revised/local_assets/Hallway_L/e2tot200/hallway_focus_f4_eval/env_rollout_images.pt\",\n",
     "}\n",
     "\n",
     "all_results = {}\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "id": "c9d19074",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
     "    smoothed_data = smoothed_data[pad_size:-pad_size]\n",
     "    return smoothed_data\n",
     "\n",
-    "def plot_rssi(rssis, title, ymin=-100, ymax=-55, is_smooth=True, colors=None, xvals=None, interval=20):\n",
+    "def plot_rssi(rssis, title, ymin=-100, ymax=-55, is_smooth=True, colors=None, xvals=None, interval=1, n_last=1):\n",
     "    \n",
     "    fig, ax = plt.subplots(figsize=(10, 6))\n",
     "    for key, rssi in rssis.items():\n",
@@ -82,7 +82,6 @@
     "            \n",
     "            # smooth data for every 20 steps only\n",
     "            rfsss = []\n",
-    "            n_last = 1\n",
     "            last_n_each = []\n",
     "            for i in range(0, len(rssi_mean), interval):\n",
     "                tmp_rfs = rssi_mean[i:i+interval]\n",
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "id": "214c6b9d",
    "metadata": {},
    "outputs": [
@@ -149,7 +148,7 @@
        " <Axes: title={'center': 'RSSI Comparison for Different Reflector Sizes'}, xlabel='Time Step', ylabel='RSSI (dBm)'>)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -244,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "id": "d3e2228d",
    "metadata": {},
    "outputs": [
@@ -255,7 +254,7 @@
        " <Axes: title={'center': 'RSSI Comparison for Different Reflector Sizes'}, xlabel='Time Step', ylabel='RSSI (dBm)'>)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -286,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "id": "fa54af2a",
    "metadata": {},
    "outputs": [
@@ -306,7 +305,7 @@
        " <Axes: title={'center': 'RSSI Comparison for Different Numbers of Users'}, xlabel='Time Step', ylabel='RSSI (dBm)'>)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
